# Qt-Framework.-Desktop-mobile-GUI

./: CMakeLists.txt  imageviewer.cpp  imageviewer.h  main.cpp  main.qml
